--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "h-ruff",
+    "name": "iot-ruff",
     "version": "0.2.0",
     "description": "hello word",
     "author": "johnson",
@@ -12,13 +12,13 @@
         "dependencies": {
             "button-gpio": "^2.0.9",
             "ruff-mbd-v1": "^4.2.10",
-            "dht11": "^0.3.6",
             "lcd1602-pcf8574a-hd44780": "^0.2.6",
             "promise": "^0.1.2",
             "menu": "^0.1.1",
             "fetch": "^0.1.2",
             "proximity-gpio": "^0.1.0"
         },
-        "version": 1
+        "version": 1,
+        "devDependencies": {}
     }
 }
